[package]
name = "pdf_metadata_shit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-writer = "0.10"
miniz_oxide = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
jpeg-decoder = "0.3.1"
jpeg-encoder = "0.6.0"